--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <header>
-        <img src="images/note.png" style='width: 50px; height: 50px;' alt="" />
+        <img src="note.png" style='width: 50px; height: 50px;' alt="" />
         <h1>Shopping List</h1>
       </header>
       <form id="item-form">
